# LipCmd-v0.1

./: .gitignore  README.md
app/: build.gradle
app/src/androidTest/java/com/hci/shrek/lipcmd_v01/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/hci/shrek/lipcmd_v01/: ImageUtils.java  MainActivity.java  OnGetImageListener.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/hci/shrek/lipcmd_v01/: ExampleUnitTest.java
dlib/: build.gradle
dlib/src/main/java/com/tzutalin/dlib/: Constants.java
gradle/wrapper/: gradle-wrapper.properties
jni/: CMakeLists.txt  imageutils_jni.cpp  rgb2yuv.cpp  rgb2yuv.h  yuv2rgb.cpp  yuv2rgb.h
